csv elbow